<resources>
    <string name="app_name">SELP</string>
    <string name="example_text_meditation" translatable="false">Медита́ция (лат. meditatio — «размышление») — ряд психических упражнений, используемых в составе духовно-религиозной или оздоровительной практики, или же особое психическое состояние, возникающее в результате этих упражнений (или в силу иных причин). Медитация может рассматриваться как вид созерцания (лат. contemplatio)[1]. Занимаясь медитацией, согласно ряду традиций, не надо делать над собой никаких усилий, нужно полностью расслабиться. Медитация — это состояние расслабленной сосредоточенности, в котором идет отрешённое наблюдение за происходящим[2]. Медитация означает, что мы чему-то предоставляем место, позволяем этому развиваться, наблюдаем, воспринимаем во всей полноте. Занимающийся медитацией ничего не должен оценивать, предоставив свободу мыслям, чувствам и протекающим в организме процессам[3]. У самых разных школ медитации есть два общих компонента, которые в терминологии буддийской психо-культуры описываются как: 1) шаматха (пали: саматха), что можно перевести как «безмятежность», «мир», «внутреннее спокойствие», умственное или физическое, 2) випашьяна (пали: випассана), что можно перевести как «осознанность», «видение мира таким, какой он есть», а не таким, каким мы хотели бы или не хотели бы его видеть[4]. Существует множество техник медитации[⇨]. В большинстве традиций во время медитации практикующему обычно требуется принять определённую позу[⇨]. Объектом концентрации обычно служат ощущения внутри организма, внутренние образы, реже эмоции. Иногда объектом концентрации может быть внешний физический предмет. Медитация может сочетаться с дыхательными упражнениями. Существуют и медитативные «танцевальные» техники — кружение суфиев, медитации Ошо Раджниша и др.</string>
    <string name="title_exercise_progress">Progress</string>
    <string name="title_psychological_test">Tests</string>
    <string name="title_my_mood">Mood</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_notes">Articles</string>
    <string name="title_meditation_music">Meditations</string>
    <string name="title_button_video">Video</string>
    <string name="title_buttonsound">Audio</string>
    <string name="title_premium">SELP Premium</string>
    <string name="title_mood_dialog">Ваше настроение сейчас:</string>
    <string name="mood_angry">Злое</string>
    <string name="mood_dreary">Нормальное</string>
    <string name="mood_depressed">Депрессивное</string>
    <string name="mood_elated">Приподнятое</string>
    <string name="mood_cheerful">Бодрое</string>
    <string name="hint_breath_start">Когда ты чувствуешь сильный страх,</string>
    <string name="hint_breath_inhale">сделай глубокий вдох носом на 4 счета,</string>
    <string name="hint_breath_pause_inhale">задержи дыхание на 4 счета,</string>
    <string name="hint_breath_exhale">сделай выдох на 4 счета</string>
    <string name="hint_breath_pause_exhale">и снова задержи дыхание тоже на 4 счета.</string>
    <string name="understand">Понятно</string>
    <string name="off_this_notification">Больше не показывать</string>
    <string-array name="notification">
        <item>Вкл.</item>
        <item>Выкл.</item>
    </string-array>
    <string name="title_cancel">Cancel</string>
    <string name="title_save">Save</string>
    <string name="going_to_bed">Going to bed</string>
    <string name="enter_the_time">Enter the time</string>
    <string name="awakening">Awakening</string>
    <string name="ex_total_sleep_time_8h_10m">Total sleep time: </string>
</resources>