<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:minWidth="280dp"
    style="@style/MaterialAlertDialog.Material3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_mood_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="2dp"
        android:text="@string/title_mood_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/mood_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/mood_cheerful"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_mood_dialog">

        <RadioButton
            android:id="@+id/mood_angry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_angry"/>

        <RadioButton
            android:id="@+id/mood_dreary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_dreary"/>

        <RadioButton
            android:id="@+id/mood_depressed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_depressed"/>

        <RadioButton
            android:id="@+id/mood_elated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_elated"/>

        <RadioButton
            android:id="@+id/mood_cheerful"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mood_cheerful"/>

    </RadioGroup>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_cancel"
        android:layout_marginTop="16dp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginEnd="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_mood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mood_choice"/>

    <Button
        android:id="@+id/save_mood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_save"
        android:layout_marginTop="16dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mood_choice"/>

</androidx.constraintlayout.widget.ConstraintLayout>