<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp"
    android:minWidth="280dp"
    style="@style/MaterialAlertDialog.Material3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_reminder_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_margin="25dp"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/reminder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="61dp"
        android:text="Это страница Сон, здесь ты будешь отслеживать кол-во твоего сна, а результаты будут отображаться на странице Прогресс."
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="37dp"
        android:text="@string/understand"
        android:textColor="#5080FC"
        android:textColorLink="#5080FC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminder_text" />

    <TextView
        android:id="@+id/not_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="7dp"
        android:text="@string/off_this_notification"
        android:textColor="#80231F20"
        app:layout_constraintStart_toEndOf="@id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reminder_text" />


</androidx.constraintlayout.widget.ConstraintLayout>